--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   provider: ^6.1.5+1
   flutter_screenutil: ^5.9.3
   go_router: ^17.0.1
+  supabase_flutter: ^2.12.0
+  flutter_dotenv: ^6.0.0
+  get_it: ^9.2.0
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
